--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 
 /* FIX:
         CENTER THE NUMBERS
+        theme colors
+        
 */
 
 *,
@@ -36,6 +38,7 @@
     /*hover*/
     --key-equal-hover: hsl(6, 78%, 64%);
     --key-blue-bg-hover: hsl(225, 70%, 79%);
+    --bg-number-hover: hsl(0, 0%, 100%);
 }
 
 .theme_2 {
@@ -59,6 +62,7 @@
     /*hover*/
     --key-equal-hover: hsl(6, 78%, 64%);
     --key-blue-bg-hover: hsl(225, 70%, 79%);
+    --bg-number-hover: hsl(0, 0%, 100%);
 }
 
 
@@ -130,7 +134,7 @@ ul {
 .calculator__top p {
     font-size: 11px;
     letter-spacing: .1ch;
-    margin-left: 28em;
+    margin-left: 26em;
 }
 
 .calculator__top_right_toggle {
@@ -212,7 +216,6 @@ ul {
     grid-template-columns: repeat(4, 4fr);
     grid-auto-rows: minmax(50px, auto);
     gap: 1.5em;
-
 }
 
 ul li {
@@ -220,14 +223,20 @@ ul li {
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+    
+    padding-top: 6px;
     cursor: pointer;
-    font-size: 32px;
 }
 
 .number {
     background: var(--key-gray);
     box-shadow: 0px 3px var(--key-gray-shadow);
     color: var(--dark-font-color);
+    font-size: 32px;
+}
+
+.number:hover{
+    background-color: var(--bg-number-hover);
 }
 
 #mult {
@@ -242,33 +251,39 @@ ul li {
     color: var(--dark-font-color);
 }
 
-#del {
+#del__btn {
     color: var(--light-font-color);
     background: var(--key-blue-bg);
     box-shadow: 0px 3px var(--key-blue-shadow);
-    font-size: 30px;
     font-weight: 400;
 }
 
-#reset {
+#reset__btn {
     grid-column: 1/3;
     color: var(--light-font-color);
     background: var(--key-blue-bg);
     box-shadow: 0px 3px var(--key-blue-shadow);
 }
 
-#reset:hover,
-.del:hover {
+#reset__btn:hover,
+#del__btn:hover {
     background-color: var(--key-blue-bg-hover);
 }
 
-#equal {
+#equal__btn {
     grid-column: 3/5;
     color: var(--light-font-color);
     background: var(--key-equal);
     box-shadow: 0px 3px var(--key-equal-shadow);
 }
 
-#equal:hover {
+#equal__btn:hover {
     background-color: var(--key-equal-hover);
+}
+
+
+#del__btn,
+#reset__btn,
+#equal__btn{
+    font-size: 22px;
 }
